components/elastic/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: elastic
  name: nginx-kibana
spec:
  type: NodePort
  selector:
    app: nginx-kibana
  ports:
    - port: 80
      targetPort: http
  externalTrafficPolicy: Local
