components/elastic/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443, "HTTP": 80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<your-acm-certificate-arn>
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: integrated
    alb.ingress.kubernetes.io/healthcheck-path: /kibana
    alb.ingress.kubernetes.io/success-codes: 401,200
  name: nginx-kibana
  namespace: elastic
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /kibana
            backend:
              service:
                name: nginx-kibana
                port:
                  number: 80
            pathType: Prefix
